# missing-table

./: .coderabbit.yaml  .env.e2e  .env.e2e.example  .env.schema  .env.test  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .railway.env.example  .secrets.baseline  .trivyignore  AI_AGENTS_ARCHITECTURE.md  APPLY_MIGRATION_QUICKSTART.md  APPLY_UPDATED_AT_MIGRATION.md  AWS_DEPLOYMENT.md  BACKUP_RESTORE.md  CHANGELOG.md  CI_CD_PIPELINE.md  CLAUDE.md  COMMIT_MESSAGE.txt  CONSOLIDATION_SUMMARY.md  CURRENT_MIGRATION_STATUS.md  DATABASE_MIGRATION_PROBLEM_AND_SOLUTION.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_MISSING_TABLE.md  DOCUMENTATION_STANDARDS.md  FILES_CREATED.md  GOOD_MORNING.md  LOCAL_K3S_SETUP.md  MATCH_SCRAPER_INTEGRATION.md  MATCH_SCRAPER_INTEGRATION_PLAN.md  MIGRATION_WORKFLOW.md  Makefile  PHASE_4_COMPLETION.md  RABBITMQ_CELERY_PROPOSAL.md  RAILWAY_DEPLOYMENT.md  TBD_STATUS_IMPLEMENTATION.md  (+33 more)
backend/: .coveragerc  .dockerignore  .env.example  .gitignore  .safety-policy.json  DATA_FIXES_2024-11-12.md  DOCKERFILE_ANALYSIS.md  Dockerfile  Dockerfile.dev  Dockerfile.secure  MT_CLI_README.md  README.md  README_APPS.md  README_MANAGE_USERS.md  STRUCTURE.md  TESTING.md  TESTING_GUIDE.md  UNUSED_FILES_ANALYSIS.md  add_guest_teams.py  api_inventory.json  app.py  app_sqlite.py  apply_021_migration.py  apply_clubs_migration.py  apply_division_fixes.py  apply_rls_fix.py  apply_rls_migration.py  audit_division_mismatches.py  auth.py  auth_security.py  backup_dev_db.py  bandit.yaml  cache_cli.py  celery_app.py  check_all_matches.py  check_all_nefc.py  check_cross_league_match_types.py  check_divisions.py  check_divisions_dev.py  check_ifa_academy_matches.py  (+87 more)
backend/api/: admin_attention.py  admin_emails.py  channel_requests.py  club_notifications.py  invite_requests.py  invites.py  push.py  webhooks_email.py
backend/api_client/: __init__.py  client.py  exceptions.py  models.py
backend/archive/deprecated-user-scripts/: README.md  migrate_user_to_username.py
backend/celery_tasks/: __init__.py  maintenance_tasks.py  match_tasks.py  validation_tasks.py
backend/constants/: positions.py
backend/dao/: admin_attention_dao.py  audit_dao.py  base_dao.py  bracket_follow_dao.py  club_dao.py  club_notifications_dao.py  data_access.py  email_messages_dao.py  email_threads_dao.py  enhanced_data_access.py  enhanced_data_access_fixed.py  exceptions.py  league_dao.py  lineup_dao.py  local_data_access.py  match_dao.py  match_event_dao.py  match_type_dao.py  notification_preferences_dao.py  player_dao.py  player_stats_dao.py  playoff_dao.py  push_send_log_dao.py  push_subscription_dao.py  qop_rankings_dao.py  roster_dao.py  season_dao.py  sports_dao.py  standings.py  supabase_data_access.py  team_dao.py  team_follow_dao.py  tournament_dao.py
backend/data/: mls-next-clubs.json  mlsnext_u13_fall.db  teams.txt
backend/docs/: 021_APPLY_MIGRATION.md  CLI_USAGE.md  MIGRATION_GUIDE.md  SUPABASE_SETUP.md
backend/docs/queue-cli/: README.md
backend/endpoints/: version.py
backend/middleware/: __init__.py  trace_middleware.py
backend/models/: __init__.py  auth.py  clubs.py  leagues.py  lineup.py  live_match.py  match_data.py  matches.py  playoffs.py  post_match.py  roster.py  seasons.py  teams.py
backend/notifications/: __init__.py  channel_resolver.py  dispatcher.py  formatters.py  preferences.py  score_change.py  senders.py  tasks.py  web_push_sender.py
backend/queue_cli/commands/: send.py  templates.py
backend/queue_cli/core/: config.py  rabbitmq.py  schema.py  templates.py
backend/queue_cli/templates/: completed-match.json  minimal.json  scheduled-match.json  tbd-match.json
backend/queue_cli/utils/: display.py
backend/scripts/: analyze_multi_league_clubs.py  apply_migrations_local.py  apply_migrations_prod_ssl.py  apply_migrations_to_env.py  audit_schema_versions.py  backup_database.py  check_api_coverage.py  diagnose_connection.py  export_openapi.py  fix_ifa_team_mappings.py  generate_api_inventory.py  generate_api_models.py  inspect_schema_direct.py  install_hooks.sh  manage_users.py  sync_users_to_local.py  tsc_cleanup.py
backend/scripts/migration/: migrate_sqlite_to_supabase_cli.py  migrate_to_new_supabase.py
backend/scripts/sample-data/: create_sample_games.py  populate_sample_data.py
backend/scripts/setup/: add_guest_teams.py  create_clubs_table.py  create_sample_matches.py  create_supabase_schema.py  populate_reference_data.py  populate_team_match_types.py  populate_teams.py  populate_teams_supabase.py  setup_audit_trail.py  setup_leagues_divisions.py  setup_schema.py
backend/scripts/start/: start_local.sh  start_supabase_cli.sh
backend/scripts/user-sync/: README.md  backup_auth_users.py  sync_users.py
backend/scripts/utilities/: README.md  cleanup_duplicate_matches.py  create_admin_invite.py  create_scraper_user.py  create_service_account_token.py  create_test_user.py  delete_cross_source_duplicates.py  search_matches.py  validate_clubs.py  validate_match_leagues.py  verify_match_id.py
backend/security/: compliance_monitor.py  container_runtime_monitor.py  incident_correlation.py  logfire_security.py  ml_anomaly_detection.py  network_intrusion_detection.py  vulnerability_tracker.py  zero_trust_network.py
backend/services/: __init__.py  email_inbound.py  email_outbound.py  email_service.py  invite_service.py  team_manager_service.py
backend/sql/: 021_add_updated_at_trigger.sql  generate_supabase_schema.sql  supabase_schema.sql
backend/supabase-local/: docker-compose.yml  setup_local_supabase.py
backend/tests/: README.md  TEST_STATUS_REPORT.md  conftest.py  legacy_e2e_supabase_script.py  test_api_client_coverage.py  test_api_endpoints.py  test_auth_endpoints.py  test_clubs.py  test_clubs_teams_integration.py  test_dao.py  test_enhanced_e2e.py  test_invite_e2e.py  test_match_preview_birth_year.py  test_version.py
backend/tests/contract/: README.md  __init__.py  conftest.py  test_admin_contract.py  test_auth_contract.py  test_cache_contract.py  test_channel_requests_contract.py  test_clubs_contract.py  (+17 more)
(+973 files in other folders)
